# LibraryMgtSystem

./: CMakeLists.txt  README.md  build_and_run_tests.sh
DB/: database_config.json
DB/data/: user_data.json
include/auth/: Auth.h
include/enums/: MediaGenre.h  MediaLanguage.h  MediaStatus.h  UserRole.h
include/media/: Book.h  CD.h  EBook.h  Media.h  Newsletter.h
include/structs/: Address.h  MediaDetails.cpp  MediaDetails.h  PersonalInfo.h
include/user/: Guest.h  Staff.h  Student.h  User.h
src/auth/: Auth.cpp
src/media/: Book.cpp  CD.cpp  EBook.cpp  Media.cpp  Newsletter.cpp
src/user/: Guest.cpp  Staff.cpp  Student.cpp  User.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/media/: BookTest.cpp  MediaTest.cpp
